--- a/hello-bootstrap/index.html
+++ b/hello-bootstrap/index.html
@@ -15,7 +15,7 @@
 
         @media screen and (max-width: 480px) {
             .my_div {
-                border: 1px solid green;
+                border: 5px solid green;
             }
         }
     </style>
@@ -24,10 +24,10 @@
 <h1>Hello Bootstrap</h1>
 
 <h2>1.网格布局</h2>
-<div class="container" style="border: 1px solid green;">
+<div class="container-fluid" style="border: 1px solid green;padding: 20px;">
     <div class="row">
-        <div class="col-md-6" style="border: 1px solid red;">左</div>
-        <div class="col-md-6" style="border: 1px solid red;">右</div>
+        <div class="col-md-4" style="border: 1px solid red;">左</div>
+        <div class="col-md-8" style="border: 1px solid red;">右</div>
     </div>
     <div class="row">
         <div class="col-md-6" style="border: 1px solid blue;">左</div>
